fixed Stars not showing

--- a/WebScraper/styles.css
+++ b/WebScraper/styles.css
@@ -6,7 +6,7 @@
 }
 .movieBox {
     opacity: 0;
-    height: 350px;
+    height: 370px;
 }
 body {
     background: linear-gradient(to right, #953abe, #ce9e1b);
